@@ -5,6 +5,10 @@
    rather than showing the out-of-range region as a third color (or
    black or white).  Thanks to Gregg Helt for suggesting this.
 
+ * Added support for a `quickHelp` configuration variable that lets
+   administrators customize the contents of the Help->General dialog.
+   Thanks to Gregg Helt for suggesting this.
+
  * Fixed failures of setup.sh legacy BAM support installation caused
    by samtools taking down their old SourceForge subversion
    repository.
